# multi-agent-research-system

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/agents/: __init__.py  analysis_agent.py  base_agent.py  quality_agent.py  research_agent.py  writer_agent.py
app/api/: __init__.py  schemas.py
app/core/: __init__.py  constants.py  exceptions.py  logging_config.py  task_repo_context.py
app/db/: __init__.py  session.py
app/eval/: __init__.py  checkpoint.py  grading.py  openai_mock.py  pipeline.py  schemas.py
app/models/: __init__.py  agent_message.py  base.py  report.py  research_task.py
app/orchestration/: __init__.py  checkpoints.py  graph.py  state.py
app/repositories/: __init__.py  message_repo.py  task_repo.py
app/services/: research_service.py
docs/: AI-AUTOMATION-PROJECT-TEMPLATE.md  architecture.md  definition-of-done-checklist.md  implementation-plan.md  problem-definition.md  runbook.md
docs/decisions/: 001-orchestration-framework.md  002-agent-communication-pattern.md  003-state-persistence-strategy.md  004-human-checkpoint-design.md
eval/: test_set.jsonl
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: evaluate.py
tests/: conftest.py
tests/integration/: test_research_endpoint.py
tests/unit/: openai_client_mocks.py  test_agent_interaction.py  test_analysis_agent.py  test_base_agent.py  test_security.py  (+15 more)
(+26 files in other folders)
